--- a/src/main/resources/web/ylt/lease.html
+++ b/src/main/resources/web/ylt/lease.html
@@ -146,29 +146,19 @@
                             <span class="sr-only">(current)</span>
                         </a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="services.html">Services</a>
-                    </li>
                     <li class="nav-item active">
-                        <a class="nav-link" href="lease.html">Booking</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                           data-toggle="dropdown" aria-haspopup="true"
-                           aria-expanded="false">
-                            Dropdown
-                        </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item text-center" href="about.html">About</a>
-                            <a class="dropdown-item text-center" href="services.html">Services</a>
+                        <a class="nav-link" th:href="@{/route/browseVehicle}">立即选车
 
-                        </div>
+                        </a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="contact.html">Contact</a>
+                        <a class="nav-link" th:href="@{/order/order}">我的订单</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/order/order}">帮助信息</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" th:href="@{/order/order}">关于我们</a>
                     </li>
                 </ul>
 
@@ -415,7 +405,7 @@
                     <input type="hidden" id="userId" name="userId">
                     <div class="row main-agile-sectns">
                         <div class="col-md-12 agileits-btm-spc form-text1">
-                            <input type="text" value="2012-05-15 21:05" id="obtainTime" name="obtainTime" data-date-format="yyyy-mm-dd hh:ii">
+                            <input type="text" id="obtainTime" name="obtainTime" data-date-format="yyyy-mm-dd hh:ii">
                         </div>
                     </div>
                     <div class="row ">
@@ -449,7 +439,7 @@
                     <h2 class="sub-head-w3ls">还车</h2>
                     <div class="row main-agile-sectns">
                         <div class="col-md-12 agileits-btm-spc form-text1">
-                            <input type="text" value="2012-05-15 21:05" id="returnTime" name="returnTime" data-date-format="yyyy-mm-dd hh:ii">
+                            <input type="text" id="returnTime" name="returnTime" data-date-format="yyyy-mm-dd hh:ii">
                         </div>
                     </div>
                     <div class="row ">
